--- a/ECommerceApplication/src/main/resources/application.properties
+++ b/ECommerceApplication/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.password=root
 
 #db config for deployment on server
-spring.datasource.url=jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:mohit}
+spring.datasource.url=jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:ecommerceappdb}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=
